<resources>
    <string name="app_name">Welearn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_uploadquestion">Uploadquestion</string>
    <string name="action_question">Question</string>
    <string name="action_answer1">correct_answer</string>
    <string name="action_answer2">answer2</string>
    <string name="action_answer3">answer3</string>
    <string name="action_answer4">answer4</string>
    <string name="question">question</string>
    <string name="submit_question">submit_question</string>
    <string name="History">History</string>
    <string name="bible">bible</string>
    <string name="math">math</string>
    <string name="english">english</string>
    <string name="title_activity_type">TypeActivity</string>
    <string name="test">test</string>
    <string name="upload">upload</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
