<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hackton.welearning.Uploadquestion"
    tools:showIn="@layout/activity_uploadquestion">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/question"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="64dp" />

    <EditText
        android:id="@+id/correctanswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/action_answer1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="128dp"
        android:layout_below="@+id/question" />

    <EditText
        android:id="@+id/wornganswer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/action_answer2"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="182dp"
        android:layout_below="@+id/correctanswer"/>

    <EditText
        android:id="@+id/wornganswer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/action_answer3"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="228dp"
        android:layout_below="@+id/wornganswer1" />

    <EditText
        android:id="@+id/wornganswewr3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/action_answer4"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="266dp"
        android:layout_below="@+id/wornganswer2"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wornganswewr3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:text="@string/submit_question" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
