<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hackton.welearning.MainActivity"
    tools:showIn="@layout/app_bar_main">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"

        android:orientation="horizontal" >

        <Button
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:layout_weight="1.0"
            android:text="@string/History" />

        <Button
            android:id="@+id/bible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_light"
            android:layout_weight="1.0"
            android:text="@string/bible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/math"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_light"
            android:layout_weight="1.0"
            android:text="@string/math" />

        <Button
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_light"
            android:layout_weight="1.0"
            android:text="@string/english" />

    </LinearLayout>

</LinearLayout>

    <!--<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:weightSum="1"
    >


    <Button
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="History"
        android:layout_weight="0.5"/>
    <Button
        android:id="@+id/bible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="History"
        android:layout_weight="0.5"/>

</LinearLayout>-->

</android.support.constraint.ConstraintLayout>
